--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 chariot-core = { path = "../chariot-core" }
+wgpu = "0.12.0" 
+winit = "0.26.1"
+pollster = "0.2.5"
+bytemuck = { version = "1.4", features = ["derive"] }
