--- a/chariot-core/Cargo.toml
+++ b/chariot-core/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 config = { version = "0.13", features = ["yaml"], default-features = false }
 serde = { version = "1.0.136", features = ["derive"] }
+bincode = "1.3.3"
 lazy_static = "1.4.0"
