--- a/chariot-core/Cargo.toml
+++ b/chariot-core/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+config = { version = "0.13", features = ["yaml"], default-features = false }
+serde = { version = "1.0.136", features = ["derive"] }
+bincode = "1.3.3"
+lazy_static = "1.4.0"
