--- a/chariot-server/Cargo.toml
+++ b/chariot-server/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glam = "0.20.3"
 chariot-core = { path = "../chariot-core" }
