--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 **/node_modules
 .idea
 chariot-core/Cargo.lock # https://doc.rust-lang.org/cargo/faq.html#why-do-binaries-have-cargolock-in-version-control-but-not-libraries
+chariot-client/Cargo.lock
+chariot-server/Cargo.lock
