--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chariot-core = { path = "../chariot-core" }
 wgpu = "0.12.0" 
+naga = "0.8.5"
 winit = "0.26.1"
 pollster = "0.2.5"
 bytemuck = { version = "1.4", features = ["derive"] }
