--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2021"
 
 [dependencies]
 chariot-core = { path = "../chariot-core" }
+wgpu = "0.12.0" 
+naga = "0.8.5"
+winit = "0.26.1"
+pollster = "0.2.5"
+bytemuck = { version = "1.4", features = ["derive"] }
+glam = "0.20.3"
+specs = "0.17.0"
+gltf = "1.0.0"
