--- a/chariot-server/Cargo.toml
+++ b/chariot-server/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2021"
 
 [dependencies]
 glam = "0.20.3"
+tokio = { version = "0.2", features = ["macros", "sync"] }
+warp = "0.2"
+serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+futures = { version = "0.3", default-features = false }
+uuid = { version = "0.4", features = ["serde", "v4"] }
 chariot-core = { path = "../chariot-core" }
