--- a/chariot-core/Cargo.toml
+++ b/chariot-core/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 glam = "0.20.3"
 config = { version = "0.13", features = ["yaml"], default-features = false }
 serde = { version = "1.0.136", features = ["derive"] }
+tungstenite = "0.16.0"
 bincode = "1.3.3"
 lazy_static = "1.4.0"
