--- a/chariot-core/Cargo.toml
+++ b/chariot-core/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glam = "0.20.3"
+glam = { version = "0.20.3", features = ["serde"] }
 config = { version = "0.13", features = ["yaml"], default-features = false }
 serde = { version = "1.0.136", features = ["derive"] }
 tungstenite = "0.16.0"
