--- a/chariot-web/package.json
+++ b/chariot-web/package.json
@@ -14,7 +14,8 @@
 	"dependencies": {
 		"next": "12.1.5",
 		"react": "18.0.0",
-		"react-dom": "18.0.0"
+		"react-dom": "18.0.0",
+		"sass": "^1.51.0"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.24",
