--- a/chariot-core/Cargo.toml
+++ b/chariot-core/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 glam = { version = "0.20.3", features = ["serde"] }
 config = { version = "0.13", features = ["yaml"], default-features = false }
 serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0"
 tungstenite = "0.16.0"
 bincode = "1.3.3"
 lazy_static = "1.4.0"
+uuid = { version = "0.7", features = ["serde", "v4"] }
