--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -13,4 +13,5 @@ winit = "0.26.1"
 pollster = "0.2.5"
 bytemuck = { version = "1.4", features = ["derive"] }
 glam = "0.20.3"
-gltf = "1.0.0"
+gltf = { version = "1.0.0", features = ["extras"] }
+serde_json = "1.0"
