--- a/chariot-server/Cargo.toml
+++ b/chariot-server/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 glam = "0.20.3"
 chariot-core = { path = "../chariot-core" }
+gltf = { version = "1.0.0", features = ["extras"] }
+serde_json = "1.0"
