--- a/chariot-core/Cargo.toml
+++ b/chariot-core/Cargo.toml
@@ -15,4 +15,5 @@ tungstenite = "0.16.0"
 bincode = "1.3.3"
 lazy_static = "1.4.0"
 rand = "0.8.5"
+openssl = { version = "0.10"}
 uuid = { version = "0.7", features = ["serde", "v4"] }
