--- a/chariot-server/Cargo.toml
+++ b/chariot-server/Cargo.toml
@@ -10,3 +10,4 @@ glam = "0.20.3"
 chariot-core = { path = "../chariot-core" }
 gltf = { version = "1.0.0", features = ["extras"] }
 serde_json = "1.0"
+openssl = { version = "0.10"}
