--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0"
 font-kit = "0.11.0"
 # sadly required by font-kit and not reexported by it :/
 pathfinder_geometry = "0.5.1"
+ordinal = "0.3.1"
