--- a/chariot-core/Cargo.toml
+++ b/chariot-core/Cargo.toml
@@ -16,3 +16,4 @@ bincode = "1.3.3"
 lazy_static = "1.4.0"
 rand = "0.8.5"
 uuid = { version = "0.7", features = ["serde", "v4"] }
+serde_millis = "0.1.1"
