--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -20,3 +20,4 @@ font-kit = "0.11.0"
 # sadly required by font-kit and not reexported by it :/
 pathfinder_geometry = "0.5.1"
 ordinal = "0.3.1"
+gilrs = "0.9.0"
