--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,11 @@ jobs:
     name: Chariot Client Tests
     runs-on: ubuntu-latest
     steps:
+      # required for gilrs
+      - name: Install libudev-dev
+        run: sudo apt-get install -y libudev-dev
+      - name: Install pkg-config
+        run: sudo apt-get install -y pkg-config
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -43,4 +48,3 @@ jobs:
         with:
           command: test
           args: --manifest-path chariot-server/Cargo.toml
-          
