--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable-x86_64-pc-windows-gnu
+          toolchain: stable
           target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
@@ -44,7 +44,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable-x86_64-pc-windows-gnu
+          toolchain: stable
           target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
