--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
+          override: true
           profile: minimal
           toolchain: stable
           target: x86_64-pc-windows-gnu
@@ -44,6 +45,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
+          override: true
           profile: minimal
           toolchain: stable
           target: x86_64-pc-windows-gnu
