--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Copy build artifacts
         run: |
           mkdir artifacts
+          ls chariot-client/target/
+          ls chariot-client/target/x86_64-pc-windows-gnu/release/
           cp chariot-client/target/x86_64-pc-windows-gnu/release/chariot_client.exe artifacts
           cp -rf chariot-core/resources artifacts
       - uses: actions/upload-artifact@v3
@@ -45,8 +47,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
+          default: true
           profile: minimal
-          toolchain: stable
           target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
@@ -55,4 +57,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-server
-          path: chariot-server/target/x86_64-pc-windows-gnu/release/chariot_server.exe
+          path: chariot-server/target/release/chariot_server.exe
