--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,13 +19,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
+          default: true
           profile: minimal
           toolchain: stable
           target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --manifest-path chariot-client/Cargo.toml --release --target x86_64-pc-windows-gnu
+          args: --manifest-path chariot-client/Cargo.toml --release
       - name: Copy build artifacts
         run: |
           mkdir artifacts
@@ -49,6 +50,7 @@ jobs:
         with:
           default: true
           profile: minimal
+          toolchain: stable
           target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
