--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,14 +19,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          default: true
           profile: minimal
           toolchain: stable
           target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --manifest-path chariot-client/Cargo.toml --release
+          args: --manifest-path chariot-client/Cargo.toml --release --target x86_64-pc-windows-gnu
       - name: Copy build artifacts
         run: |
           mkdir artifacts
@@ -46,14 +45,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          default: true
           profile: minimal
           toolchain: stable
           target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --manifest-path chariot-server/Cargo.toml --release
+          args: --manifest-path chariot-server/Cargo.toml --release --target x86_64-pc-windows-gnu
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-server
