--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,25 +11,21 @@ name: Build Release
 jobs:
   client_build:
     name: Chariot Client Release Builds
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
-      # required for gilrs
-      - name: Install libudev-dev and pkg-config and cross comp linker
-        run: sudo apt-get install -y libudev-dev pkg-config mingw-w64
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
-          target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --manifest-path chariot-client/Cargo.toml --release --target x86_64-pc-windows-gnu
+          args: --manifest-path chariot-client/Cargo.toml --release
       - name: Copy build artifacts
         run: |
           mkdir artifacts
-          cp chariot-client/target/x86_64-pc-windows-gnu/release/chariot-client.exe artifacts
+          cp chariot-client/target/release/chariot-client.exe artifacts
           cp -rf chariot-core/resources artifacts
       - uses: actions/upload-artifact@v3
         with:
@@ -38,21 +34,18 @@ jobs:
 
   server_build:
     name: Chariot Server Release Builds
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
-      - name: Install cross comp linker
-        run: sudo apt-get install -y mingw-w64
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
-          target: x86_64-pc-windows-gnu
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --manifest-path chariot-server/Cargo.toml --release --target x86_64-pc-windows-gnu
+          args: --manifest-path chariot-server/Cargo.toml --release
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-server
-          path: chariot-server/target/x86_64-pc-windows-gnu/release/chariot-server.exe
+          path: chariot-server/target/release/chariot-server.exe
