--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           mkdir artifacts
           cp chariot-client/target/release/chariot-client.exe artifacts
-          cp -rf chariot-core/resources artifacts
+          cp -Recurse chariot-core/resources artifacts
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-client
