spread the love

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,9 @@ jobs:
     name: Chariot Client Tests
     runs-on: ubuntu-latest
     steps:
-      # required for gilrs
-      - name: Install libudev-dev
-        run: sudo apt-get install -y libudev-dev
-      - name: Install pkg-config
-        run: sudo apt-get install -y pkg-config
+      # required for gilrs, rodio
+      - name: Install build dependencies
+        run: sudo apt-get install -y libudev-dev pkg-config libasound2-dev
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
