--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -22,6 +22,7 @@ pathfinder_geometry = "0.5.1"
 ordinal = "0.3.1"
 gilrs = "0.9.0"
 lazy_static = "1.4.0"
+include-flate = { version = "0.1.4", features = ["stable"] }
 
 [profile.release]
 lto = "fat"
