--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 on:
   workflow_dispatch:
+  pull_request:
   push:
     branches:
       - main
@@ -24,7 +25,8 @@ jobs:
         run: |
           mkdir release
           cp chariot-client/target/release/chariot-client.exe release
-          cp resources/* release -Recurse
+          cp config.example.yaml release
+          cp DONT_FORGET_TO_DOWNLOAD_TRACKS.txt release
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-client
@@ -47,7 +49,8 @@ jobs:
         run: |
           mkdir release
           cp chariot-server/target/release/chariot-server.exe release
-          cp resources/* release
+          cp config.example.yaml release
+          cp DONT_FORGET_TO_DOWNLOAD_TRACKS.txt release
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-server
