--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,5 @@
 on:
   workflow_dispatch:
-  pull_request:
   push:
     branches:
       - main
@@ -25,7 +24,7 @@ jobs:
         run: |
           mkdir release
           cp chariot-client/target/release/chariot-client.exe release
-          cp config.example.yaml release
+          cp config.example.yaml release/config.yaml
           cp DONT_FORGET_TO_DOWNLOAD_TRACKS.txt release
       - uses: actions/upload-artifact@v3
         with:
@@ -49,7 +48,7 @@ jobs:
         run: |
           mkdir release
           cp chariot-server/target/release/chariot-server.exe release
-          cp config.example.yaml release
+          cp config.example.yaml release/config.yaml
           cp DONT_FORGET_TO_DOWNLOAD_TRACKS.txt release
       - uses: actions/upload-artifact@v3
         with:
