embedded resource management (#74)
* compile client with both shaders and models embedded

* aggressively made everything except the track file into an embedded asset

* rustfmt

* questions merged into code to reduce physical assets

* last release prep stuff

* release works and we are good to go

* idk why this didn't error before I pushed

Co-authored-by: KNOXDEV <KNOXDEV@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,8 @@ jobs:
         run: |
           mkdir release
           cp chariot-client/target/release/chariot-client.exe release
-          cp resources/* release -Recurse
+          cp config.example.yaml release/config.yaml
+          cp DONT_FORGET_TO_DOWNLOAD_TRACKS.txt release
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-client
@@ -47,7 +48,8 @@ jobs:
         run: |
           mkdir release
           cp chariot-server/target/release/chariot-server.exe release
-          cp resources/* release
+          cp config.example.yaml release/config.yaml
+          cp DONT_FORGET_TO_DOWNLOAD_TRACKS.txt release
       - uses: actions/upload-artifact@v3
         with:
           name: chariot-server
