--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # required for gilrs
-      - name: Install libudev-dev
-        run: sudo apt-get install -y libudev-dev
-      - name: Install pkg-config
-        run: sudo apt-get install -y pkg-config
+      - name: Install build dependencies
+        run: sudo apt-get install -y libudev-dev pkg-config libasound2-dev
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
