--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -21,6 +21,7 @@ font-kit = "0.11.0"
 pathfinder_geometry = "0.5.1"
 ordinal = "0.3.1"
 gilrs = "0.9.0"
+rodio = { version = "0.15.0", default-features = false, features = ["vorbis"] }
 lazy_static = "1.4.0"
 include-flate = { version = "0.1.4", features = ["stable"] }
 
