--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
 			"request": "launch",
 			"name": "Debug",
 			"program": "${workspaceFolder}/chariot-client/target/debug/chariot-client.exe",
-			"args": [],
+			"args": [
+				" d"
+			],
 			"cwd": "${workspaceFolder}"
 		}
 	]
