--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -22,6 +22,7 @@ pathfinder_geometry = "0.5.1"
 ordinal = "0.3.1"
 gilrs = "0.9.0"
 lazy_static = "1.4.0"
+once_cell = "1.12.0"
 
 [profile.release]
 lto = "fat"
