--- a/chariot-web/package.json
+++ b/chariot-web/package.json
@@ -12,11 +12,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"internal-ip": "^7.0.0",
 		"next": "12.1.5",
 		"public-ip": "^5.0.0",
-		"react": "18.0.0",
-		"react-dom": "18.0.0",
-		"sass": "^1.51.0"
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-type-animation": "^1.1.3",
+		"sass": "^1.51.0",
+		"typewriter-effect": "^2.18.2"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.24",
