--- a/chariot-client/Cargo.toml
+++ b/chariot-client/Cargo.toml
@@ -26,6 +26,7 @@ lazy_static = "1.4.0"
 once_cell = "1.12.0"
 include-flate = { version = "0.1.4", features = ["stable"] }
 backoff = "0.4.0"
+rand = "0.8.5"
 
 [profile.release]
 lto = "fat"
